--- a/index.html
+++ b/index.html
@@ -3,76 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Papi Protein Pancakes</title>
+    <title>Papi Protein Pancakes - Healthy and Protein-Packed!</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="header">
-        <h1>Papi Protein Pancakes</h1>
-        <p>Start Your Morning with High-Protein Goodness!</p>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#nutrition">Nutrition Facts</a></li>
+                <li><a href="#pricing">Our Products</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+        <div class="hero">
+            <h1>Papi Protein Pancakes</h1>
+            <p>Fuel your mornings with health, energy, and protein!</p>
+        </div>
     </header>
-    <nav class="navbar">
-        <a href="#about">About Us</a>
-        <a href="#products">Products</a>
-        <a href="#ingredients">Ingredients</a>
-        <a href="#contact">Contact</a>
-    </nav>
-    <section id="about" class="about">
-        <h2>About Us</h2>
-        <p>Welcome to Papi Protein Pancakes, your go-to destination for delicious, high-protein breakfast options. Our pancakes and cupcakes are packed with nutrients to fuel your day!</p>
-    </section>
-    <section id="products" class="products">
-        <h2>Our Products</h2>
-        <div class="product">
-            <h3>Protein Pancakes</h3>
-            <p>Nutrition per Pancake:</p>
+    <main>
+        <section id="about">
+            <h2>About Us</h2>
+            <p>At Papi Protein Pancakes, our mission is simple: to empower your mornings with wholesome, protein-packed pancakes and cupcakes. Perfect for athletes, fitness enthusiasts, and anyone who loves a nutritious start to the day!</p>
+            <img src="images/pancake-stack.jpg" alt="Healthy Pancake Stack">
+        </section>
+        <section id="nutrition">
+            <h2>Nutrition Facts</h2>
+            <p>Each pancake is crafted with premium ingredients to deliver the perfect balance of nutrients:</p>
             <ul>
-                <li>Protein: 10.27g</li>
-                <li>Carbs: 10.72g</li>
-                <li>Fat: 4.5g</li>
-                <li>Calories: 122</li>
+                <li><strong>Protein:</strong> 10.27 grams</li>
+                <li><strong>Carbohydrates:</strong> 10.72 grams</li>
+                <li><strong>Fat:</strong> 4.5 grams</li>
+                <li><strong>Calories:</strong> 122</li>
             </ul>
-            <p>Pricing:</p>
+            <h3>Ingredients</h3>
+            <p>Made with wholesome and natural ingredients:</p>
+            <p>
+                Almond & Whole grain wheat & oat flours, whey & milk proteins, wheat gluten, brown sugar, leavening (baking soda, monocalcium phosphate), buttermilk, sea salt, Greek yogurt, cottage cheese, egg & egg whites, cinnamon, vanilla, honey.
+            </p>
+            <p>
+                <strong>Contains:</strong> Milk, wheat, egg, tree nuts.<br>
+                <strong>May contain:</strong> Trace amounts of soy.
+            </p>
+        </section>
+        <section id="pricing">
+            <h2>Our Products</h2>
+            <p>Whether you're looking for a quick snack or a full breakfast, we’ve got you covered with our high-protein offerings:</p>
+            <h3>Pancakes</h3>
             <ul>
-                <li>1 Pancake - $3</li>
-                <li>5 Pancake Stack - $12</li>
-                <li>12 Pancakes - $20</li>
+                <li>1 Pancake: $3</li>
+                <li>5 Pancake Stack: $12</li>
+                <li>12 Pancakes: $20</li>
             </ul>
-        </div>
-        <div class="product">
             <h3>Protein Cupcakes</h3>
-            <p>Similar to our pancakes, our high-protein cupcakes are perfect for a sweet yet healthy treat.</p>
-            <p>Pricing:</p>
             <ul>
-                <li>1 Cupcake - $3</li>
-                <li>5 Cupcakes - $12</li>
-                <li>12 Cupcakes - $20</li>
+                <li>1 Cupcake: $3</li>
+                <li>5 Cupcake Pack: $12</li>
+                <li>12 Cupcakes: $20</li>
             </ul>
-        </div>
-    </section>
-    <section id="ingredients" class="ingredients">
-        <h2>Ingredients</h2>
-        <p>Our delicious pancakes and cupcakes are made with:</p>
-        <ul>
-            <li>Almond & Whole grain wheat & oat flours</li>
-            <li>Whey & milk proteins</li>
-            <li>Wheat gluten</li>
-            <li>Brown sugar</li>
-            <li>Leavening (baking soda, monocalcium phosphate)</li>
-            <li>Buttermilk</li>
-            <li>Sea salt</li>
-            <li>Greek yogurt</li>
-            <li>Cottage cheese</li>
-            <li>Egg & egg whites</li>
-            <li>Cinnamon</li>
-            <li>Vanilla</li>
-            <li>Honey</li>
-        </ul>
-        <p><strong>Contains:</strong> Milk, wheat, egg, tree nuts.</p>
-        <p><strong>May contain:</strong> Trace amounts of soy.</p>
-    </section>
-    <footer class="footer">
-        <p>© 2025 Papi Protein Pancakes. All rights reserved.</p>
+            <img src="images/pancakes-cupcakes.jpg" alt="Protein Pancakes and Cupcakes">
+        </section>
+        <section id="contact">
+            <h2>Contact Us</h2>
+            <p>Have questions about our products or need help placing an order? We’d love to hear from you! papiproteinpancakes@gmail.com </p>
+            <p>Email us at: <a href="mailto:papiproteinpancakes@gmail.com">papiproteinpancakes@gmail.com</a></p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2025 Papi Protein Pancakes. Built for health and happiness.</p>
     </footer>
 </body>
 </html>
