--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <ul>
                 <li><strong>Protein:</strong> 10.27 grams</li>
                 <li><strong>Carbohydrates:</strong> 10.72 grams</li>
+                <li><strong>Added Sugar:</strong> 3.00 grams</li>
                 <li><strong>Fat:</strong> 4.5 grams</li>
                 <li><strong>Calories:</strong> 122</li>
             </ul>
@@ -44,6 +45,9 @@
             <p>
                 <strong>Contains:</strong> Milk, wheat, egg, tree nuts.<br>
                 <strong>May contain:</strong> Trace amounts of soy.
+           </p>
+            <p>
+                <strong> RECOMMENEDED REFRIGERATION 
             </p>
         </section>
         <section id="pricing">
