--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <strong>May contain:</strong> Trace amounts of soy.
            </p>
             <p>
-                <strong> RECOMMENEDED REFRIGERATION 
+                <strong> KEEP REFRIGERATED
             </p>
         </section>
         <section id="pricing">
@@ -61,9 +61,9 @@
             </ul>
             <h3>Protein Cupcakes</h3>
             <ul>
-                <li>1 Cupcake: $3</li>
-                <li>5 Cupcake Pack: $13</li>
-                <li>12 Cupcakes: $23</li>
+                <li>1 Cupcake: $3    (+$1 for Blueberries or Chocolate)</li>
+                <li>5 Cupcake Pack: $13 (+$3 for Blueberries or Chocolate)</li>
+                <li>12 Cupcakes: $23 (+$5 for Blueberries or Chocolate)</li>
             </ul>
             <img src="pancakes-cupcakes.jpg" alt="Protein Pancakes and Cupcakes">
         </section>
