--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
         <section id="about">
             <h2>About Us</h2>
             <p>At Papi Protein Pancakes, our mission is simple: to empower your mornings with wholesome, protein-packed pancakes and cupcakes. Perfect for athletes, fitness enthusiasts, and anyone who loves a nutritious start to the day!</p>
-            <img src="mrpancake-stack.jpg" alt="Healthy Pancake Stack">
+            <img src="cupcake1.jpg" alt="Healthy Pancake Stack">
+            <img src="cupcake2.jpg" alt="Healthy Pancake Stack">
+            <img src="pancakes1.jpg" alt="Healthy Pancake Stack">
+            <img src="pancakes2.jpg" alt="Healthy Pancake Stack">
         </section>
         <section id="nutrition">
             <h2>Nutrition Facts</h2>
