--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <section id="about">
             <h2>About Us</h2>
             <p>At Papi Protein Pancakes, our mission is simple: to empower your mornings with wholesome, protein-packed pancakes and cupcakes. Perfect for athletes, fitness enthusiasts, and anyone who loves a nutritious start to the day!</p>
-            <img src="cupcake1.jpg" alt="Healthy Pancake Stack">
-            <img src="cupcake2.jpg" alt="Healthy Pancake Stack">
+            <img src="cupcake1.jpg" alt="Healthy Cupcake">
+            <img src="cupcake2.jpg" alt="Healthy Cupcake">
             <img src="pancakes1.jpg" alt="Healthy Pancake Stack">
             <img src="pancakes2.jpg" alt="Healthy Pancake Stack">
         </section>
