--- a/index.html
+++ b/index.html
@@ -25,10 +25,7 @@
         <section id="about">
             <h2>About Us</h2>
             <p>At Papi Protein Pancakes, our mission is simple: to empower your mornings with wholesome, protein-packed pancakes and cupcakes. Perfect for athletes, fitness enthusiasts, and anyone who loves a nutritious start to the day!</p>
-            <img src="cupcake1.jpg" alt="Healthy Cupcake">
-            <img src="cupcake2.jpg" alt="Healthy Cupcake">
-            <img src="pancakes1.jpg" alt="Healthy Pancake Stack">
-            <img src="pancakes2.jpg" alt="Healthy Pancake Stack">
+            <img src="mrpancake-stack.jpg" alt="Healthy Cupcake">
         </section>
         <section id="nutrition">
             <h2>Nutrition Facts</h2>
@@ -68,7 +65,10 @@
                 <li>5 Cupcake Pack: $13 (+$3 for Blueberries or Chocolate)</li>
                 <li>12 Cupcakes: $23 (+$5 for Blueberries or Chocolate)</li>
             </ul>
-            <img src="pancakes-cupcakes.jpg" alt="Protein Pancakes and Cupcakes">
+            <img src="cupcake1.jpg" alt="Healthy Cupcake">
+            <img src="cupcake2.jpg" alt="Healthy Cupcake">
+            <img src="pancakes1.jpg" alt="Healthy Pancake Stack">
+            <img src="pancakes2.jpg" alt="Healthy Pancake Stack">
         </section>
         <section id="contact">
             <h2>Contact Us</h2>
