--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <li>12 Cupcakes: $23 (+$5 for Blueberries or Chocolate)</li>
             </ul>
             <img src="cupcake1.jpg" alt="Healthy Cupcake">
-            <img src="cupcake2.jpg" alt="Healthy Cupcake">
+            <img src="cupcakes2.jpg" alt="Healthy Cupcake">
             <img src="pancakes1.jpg" alt="Healthy Pancake Stack">
             <img src="pancakes2.jpg" alt="Healthy Pancake Stack">
         </section>
