--- a/index.html
+++ b/index.html
@@ -65,10 +65,12 @@
                 <li>5 Cupcake Pack: $13 (+$3 for Blueberries or Chocolate)</li>
                 <li>12 Cupcakes: $23 (+$5 for Blueberries or Chocolate)</li>
             </ul>
-            <img src="cupcake1.jpg" alt="Healthy Cupcake">
-            <img src="cupcakes2.jpg" alt="Healthy Cupcake">
-            <img src="pancakes1.jpg" alt="Healthy Pancake Stack">
-            <img src="pancakes2.jpg" alt="Healthy Pancake Stack">
+            <div class="product-images">
+                <img src="cupcake1.jpg" alt="Healthy Cupcake">
+                <img src="cupcakes2.jpg" alt="Healthy Cupcake">
+                <img src="pancakes1.jpg" alt="Healthy Pancake Stack">
+                <img src="pancakes2.jpg" alt="Healthy Pancake Stack">
+            </div>
         </section>
         <section id="contact">
             <h2>Contact Us</h2>
