--- a/index.html
+++ b/index.html
@@ -76,6 +76,32 @@
             <h2>Contact Us</h2>
             <p>Have questions about our products or need help placing an order? We’d love to hear from you! papiproteinpancakes@gmail.com </p>
             <p>Email us at: <a href="mailto:papiproteinpancakes@gmail.com">papiproteinpancakes@gmail.com</a></p>
+            <div class="social-handles">
+                <h3>Connect & Support</h3>
+                <ul>
+                    <li>
+                        Instagram: 
+                        <a href="https://instagram.com/papiproteinpancake" target="_blank">@papiproteinpancake</a>
+                    </li>
+                    <li>
+                        X (Twitter): 
+                        <a href="https://x.com/papi_pancake" target="_blank">@papi_pancake</a>
+                    </li>
+                    <li>
+                        Shef: 
+                        <a href="https://www.shef.com/chef/papi-protein-pancakes" target="_blank">Papi Protein Pancakes</a>
+                    </li>
+                    <li>
+                        Email: papiproteinpancakes@gmail.com
+                    </li>
+                    <li>
+                        Zelle: papiproteinpancakesaz@gmail.com
+                    </li>
+                    <li>
+                        Cash App: $papiproteinpancakes
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     <footer>
