--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
                 <li>5 Pancake Stack: $13</li>
                 <li>12 Pancakes: $23</li>
             </ul>
+            <h3>Mini Pancakes</h3>
+            <p><em>3 mini pancakes = 1 regular pancake</em></p>
+            <ul>
+                <li>3 Mini Pancakes: $3</li>
+                <li>15 Mini Pancakes: $13</li>
+                <li>30 Mini Pancakes: $23</li>
+            </ul>
             <h3>Protein Cupcakes</h3>
             <ul>
                 <li>1 Cupcake: $3    (+$1 for Blueberries or Chocolate)</li>
