--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Papi Protein Pancakes - Healthy and Protein-Packed!</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        /* Add style for disclaimer */
+        .disclaimer {
+            font-size: 0.75em;
+            color: #999;
+            text-align: center;
+            margin-top: 1.5em;
+            margin-bottom: 0.5em;
+            line-height: 1.4;
+            max-width: 90%;
+            margin-left: auto;
+            margin-right: auto;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -113,6 +127,12 @@
     </main>
     <footer>
         <p>&copy; 2025 Papi Protein Pancakes. Built for health and happiness.</p>
+        <div class="disclaimer">
+            This product was produced in a home kitchen that may come in contact with common food allergens and pet allergens and is not subject to public health inspection<br>
+            Registration Number of Food Preparer: L2S-FH-000037360718<br>
+            <a href="https://www.azdhs.gov/preparedness/epidemiology-disease-control/food-safety-environmental-services/cottage-food-program/index.php" target="_blank"
+               style="color: #999; text-decoration: underline;">https://www.azdhs.gov/preparedness/epidemiology-disease-control/food-safety-environmental-services/cottage-food-program/index.php</a>
+        </div>
     </footer>
     <script>
     function setHeaderHeightVars() {
