--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@
         </section>
         <section id="contact">
             <h2>Contact Us</h2>
-            <p>Have questions about our products or need help placing an order? We’d love to hear from you! papiproteinpancakes@gmail.com </p>
-            <p>Email us at: <a href="mailto:papiproteinpancakes@gmail.com">papiproteinpancakes@gmail.com</a></p>
+            <p>Have questions about our products or need help placing an order? We’d love to hear from you! </p>
             <div class="social-handles">
                 <h3>Connect & Support</h3>
                 <ul>
@@ -129,7 +128,6 @@
         <p>&copy; 2025 Papi Protein Pancakes. Built for health and happiness.</p>
         <div class="disclaimer">
             This product was produced in a home kitchen that may come in contact with common food allergens and pet allergens and is not subject to public health inspection<br>
-            Registration Number of Food Preparer: L2S-FH-000037360718<br>
             <a href="https://www.azdhs.gov/preparedness/epidemiology-disease-control/food-safety-environmental-services/cottage-food-program/index.php" target="_blank"
                style="color: #999; text-decoration: underline;">https://www.azdhs.gov/preparedness/epidemiology-disease-control/food-safety-environmental-services/cottage-food-program/index.php</a>
         </div>
