--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <section id="about">
             <h2>About Us</h2>
             <p>At Papi Protein Pancakes, our mission is simple: to empower your mornings with wholesome, protein-packed pancakes and cupcakes. Perfect for athletes, fitness enthusiasts, and anyone who loves a nutritious start to the day!</p>
-            <p>Papi Protein Pancakes Products are currently only availble for FREE local Delivery in the following cities Mesa AZ, Tempe AZ, Chandler AZ!</p>
+            <p>Papi Protein Pancakes Products are currently only availble for FREE local Delivery in the following cities: Mesa AZ, Tempe AZ, Chandler AZ!</p>
             <img src="mrpancake-stack.jpg" alt="Healthy Cupcake">
         </section>
         <section id="nutrition">
