--- a/index.html
+++ b/index.html
@@ -81,6 +81,34 @@
                 <img src="pancakes2.jpg" alt="Healthy Pancake Stack">
             </div>
         </section>
+                <section id="pricing">
+            <!-- ...existing pricing/product code... -->
+            <div class="product-images">
+                <img src="cupcake1.jpg" alt="Healthy Cupcake">
+                <img src="cupcakes2.jpg" alt="Healthy Cupcake">
+                <img src="pancakes1.jpg" alt="Healthy Pancake Stack">
+                <img src="pancakes2.jpg" alt="Healthy Pancake Stack">
+            </div>
+        </section>
+        <section id="pricing">
+            <!-- ...existing pricing/product code... -->
+            <div class="product-images">
+                <img src="cupcake1.jpg" alt="Healthy Cupcake">
+                <img src="cupcakes2.jpg" alt="Healthy Cupcake">
+                <img src="pancakes1.jpg" alt="Healthy Pancake Stack">
+                <img src="pancakes2.jpg" alt="Healthy Pancake Stack">
+            </div>
+        </section>
+        <section id="order">
+            <h2>Order Now</h2>
+            <p>Ready to fuel your day? Place your order for our protein-packed treats through Square. Choose your favorite below:</p>
+            <div class="order-buttons">
+                <a class="btn" href="https://square.link/u/jNyUJYZc" target="_blank" rel="noopener">Order Protein Pancakes</a>
+                <a class="btn" href="https://square.link/u/ahcGZY0u" target="_blank" rel="noopener">Order Protein Cupcakes</a>
+                <a class="btn" href="https://square.link/u/0jNYbs5q" target="_blank" rel="noopener">Order Mini Protein Pancakes</a>
+            </div>
+            <p class="disclaimer">All orders are for FREE local delivery in Mesa, Tempe, and Chandler, AZ only.</p>
+        </section>
         <section id="contact">
             <h2>Contact Us</h2>
             <p>Have questions about our products or need help placing an order? We’d love to hear from you! </p>
