--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <a class="btn" href="https://square.link/u/ahcGZY0u" target="_blank" rel="noopener">Order Protein Cupcakes</a>
                 <a class="btn" href="https://square.link/u/0jNYbs5q" target="_blank" rel="noopener">Order Mini Protein Pancakes</a>
             </div>
-            <p class="disclaimer">All orders are for FREE local delivery in Mesa, Tempe, and Chandler, AZ only.</p>
+            <p class="disclaimer">FREE local delivery on orders in Mesa, Tempe, and Chandler, AZ only.</p>
         </section>
         <section id="contact">
             <h2>Contact Us</h2>
