--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li><a href="#about">About Us</a></li>
             <li><a href="#nutrition">Nutrition Facts</a></li>
             <li><a href="#pricing">Our Products</a></li>
+            <li><a href="#order">Order</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
