--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </section>
         <section id="order">
             <h2>Order Now</h2>
-            <p>Ready to fuel your day? Place your order for our protein-packed treats through Square. Choose your favorite below:</p>
+            <p>Ready to fuel your day? Place your order for our protein-packed treats! Choose your favorite below:</p>
             <div class="order-buttons">
                 <a class="btn" href="https://square.link/u/jNyUJYZc" target="_blank" rel="noopener">Order Protein Pancakes</a>
                 <a class="btn" href="https://square.link/u/ahcGZY0u" target="_blank" rel="noopener">Order Protein Cupcakes</a>
