--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Papi Protein Pancakes - Healthy and Protein-Packed!</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon.png" />
 </head>
 <body>
     <header>
