--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     </li>
                     <li>
                         Shef: 
-                        <a href="https://www.shef.com/chef/papi-protein-pancakes" target="_blank">Papi Protein Pancakes</a>
+                        <a href="https://shef.com/order/shef/brian-g-44" target="_blank">Papi Protein Pancakes</a>
                     </li>
                     <li>
                         Email: papiproteinpancakes@gmail.com
