--- a/index.html
+++ b/index.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Papi Protein Pancakes - Healthy and Protein-Packed!</title>
+    <title>Papi Protein Pancakes | Best Healthy Protein Pancakes & Cupcakes in Mesa, Tempe, Chandler AZ</title>
+    <meta name="description" content="Order the best protein pancakes and cupcakes in Mesa, Tempe, and Chandler, AZ! Papi Protein Pancakes offers healthy, high-protein breakfast and snack options with free local delivery. Perfect for athletes and anyone who loves nutritious food!">
+    <meta name="keywords" content="papi protein pancakes, protein pancakes, healthy pancakes, high protein pancakes, protein cupcakes, Mesa AZ, Tempe AZ, Chandler AZ, best protein pancakes, local delivery, healthy breakfast, fitness pancakes">
+    <link rel="canonical" href="https://yourdomain.com/">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700&display=swap" rel="stylesheet">
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Papi Protein Pancakes - Best Healthy Protein Pancakes & Cupcakes">
+    <meta property="og:description" content="Healthy, protein-packed pancakes & cupcakes delivered FREE in Mesa, Tempe, and Chandler, AZ. Fuel your fitness with Papi Protein Pancakes!">
+    <meta property="og:image" content="https://yourdomain.com/mrpancake-stack.jpg">
+    <meta property="og:url" content="https://yourdomain.com/">
+    <meta property="og:type" content="website">
+    <!-- Twitter Card Meta -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Papi Protein Pancakes - Healthy, Protein-Packed Breakfasts">
+    <meta name="twitter:description" content="Order the best protein pancakes and cupcakes in Mesa, Tempe, and Chandler, AZ for FREE local delivery.">
+    <meta name="twitter:image" content="https://yourdomain.com/mrpancake-stack.jpg">
+    <!-- Favicons and Manifest -->
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
@@ -13,33 +28,52 @@
     <link rel="icon" type="image/png" sizes="192x192" href="android-chrome-192x192.png">
     <link rel="icon" type="image/png" sizes="512x512" href="android-chrome-512x512.png">
     <link rel="manifest" href="site.webmanifest">
+    <!-- Local Business Schema -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "Papi Protein Pancakes",
+      "image": "https://yourdomain.com/mrpancake-stack.jpg",
+      "description": "Healthy, high-protein pancakes and cupcakes. Free local delivery in Mesa, Tempe, Chandler AZ.",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Mesa",
+        "addressRegion": "AZ",
+        "addressCountry": "US"
+      },
+      "areaServed": ["Mesa AZ", "Tempe AZ", "Chandler AZ"],
+      "url": "https://yourdomain.com/",
+      "email": "papiproteinpancakes@gmail.com"
+    }
+    </script>
 </head>
 <body>
     <header>
-    <div class="hero">
-        <h1>Papi Protein Pancakes</h1>
-        <p>Fuel your mornings with health, energy, and protein!</p>
-    </div>
-    <nav>
-        <ul>
-            <li><a href="#about">About Us</a></li>
-            <li><a href="#nutrition">Nutrition Facts</a></li>
-            <li><a href="#pricing">Our Products</a></li>
-            <li><a href="#order">Order</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
+        <div class="hero">
+            <h1>Papi Protein Pancakes</h1>
+            <p>The Best Protein Pancakes & Cupcakes in Mesa, Tempe, and Chandler, AZ. Healthy. Delicious. Delivered.</p>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#about">About Our Protein Pancakes</a></li>
+                <li><a href="#nutrition">Nutrition Facts</a></li>
+                <li><a href="#pricing">Products & Pricing</a></li>
+                <li><a href="#order">Order Protein Pancakes</a></li>
+                <li><a href="#contact">Contact Papi Protein Pancakes</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section id="about">
-            <h2>About Us</h2>
-            <p>At Papi Protein Pancakes, our mission is simple: to empower your mornings with wholesome, protein-packed pancakes and cupcakes. Perfect for athletes, fitness enthusiasts, and anyone who loves a nutritious start to the day!</p>
-            <p>Papi Protein Pancakes Products are currently only availble for FREE local Delivery in the following cities: Mesa AZ, Tempe AZ, Chandler AZ!</p>
-            <img src="mrpancake-stack.jpg" alt="Healthy Cupcake">
+            <h2>About Papi Protein Pancakes</h2>
+            <p>Welcome to <strong>Papi Protein Pancakes</strong>, your go-to for healthy, high-protein pancakes and cupcakes in Mesa, Tempe, and Chandler, AZ! Our mission is to empower your mornings with protein-packed, nutritious, and delicious <strong>protein pancakes</strong> and cupcakes. Loved by athletes, fitness enthusiasts, and anyone seeking a healthy breakfast or snack.</p>
+            <p><b>FREE local delivery</b> available in: Mesa AZ, Tempe AZ, Chandler AZ!</p>
+            <img src="mrpancake-stack.jpg" alt="Papi Protein Pancakes - Healthy Protein Pancake Stack in Mesa, AZ">
         </section>
         <section id="nutrition">
-            <h2>Nutrition Facts</h2>
-            <p>Each pancake is crafted with premium ingredients to deliver the perfect balance of nutrients:</p>
+            <h2>Papi Protein Pancakes Nutrition Facts</h2>
+            <p>Each <strong>protein pancake</strong> is crafted with premium, wholesome ingredients to deliver the perfect balance of nutrients:</p>
             <ul>
                 <li><strong>Protein:</strong> 10.27 grams</li>
                 <li><strong>Carbohydrates:</strong> 10.72 grams</li>
@@ -47,92 +81,74 @@
                 <li><strong>Fat:</strong> 4.5 grams</li>
                 <li><strong>Calories:</strong> 122</li>
             </ul>
-            <h3>Ingredients</h3>
-            <p>Made with wholesome and natural ingredients:</p>
+            <h3>Protein Pancake Ingredients</h3>
+            <p>Our pancakes and cupcakes are made with wholesome, natural ingredients:</p>
             <p>
-                Almond & Whole grain wheat & oat flours, whey & milk proteins, wheat gluten, brown sugar, leavening (baking soda, monocalcium phosphate), buttermilk, sea salt, Greek yogurt, cottage cheese, egg & egg whites, cinnamon, vanilla, honey.
+                Almond & whole grain wheat & oat flours, whey & milk proteins, wheat gluten, brown sugar, leavening (baking soda, monocalcium phosphate), buttermilk, sea salt, Greek yogurt, cottage cheese, egg & egg whites, cinnamon, vanilla, honey.
             </p>
             <p>
                 <strong>Contains:</strong> Milk, wheat, egg, tree nuts.<br>
                 <strong>May contain:</strong> Trace amounts of soy.
-           </p>
-            <p>
-                <strong> KEEP REFRIGERATED
             </p>
+            <p><strong>KEEP REFRIGERATED</strong></p>
         </section>
         <section id="pricing">
-            <h2>Our Products</h2>
-            <p>Whether you're looking for a quick snack or a full breakfast, we’ve got you covered with our high-protein offerings:</p>
+            <h2>Our Protein Pancake & Cupcake Products</h2>
+            <p>Whether you're after a quick snack or a full breakfast, we’ve got you covered with our high-protein pancakes and cupcakes:</p>
             <h3>Pancakes</h3>
             <ul>
-                <li>1 Pancake: $3</li>
-                <li>5 Pancake Stack: $13</li>
-                <li>12 Pancakes: $23</li>
+                <li>1 Protein Pancake: $3</li>
+                <li>5 Protein Pancake Stack: $13</li>
+                <li>12 Protein Pancakes: $23</li>
             </ul>
             <h3>Mini Pancakes</h3>
-            <p><em>3 mini pancakes = 1 regular pancake</em></p>
+            <p><em>3 mini pancakes = 1 regular protein pancake</em></p>
             <ul>
-                <li>3 Mini Pancakes: $3</li>
-                <li>15 Mini Pancakes: $13</li>
-                <li>30 Mini Pancakes: $23</li>
+                <li>3 Mini Protein Pancakes: $3</li>
+                <li>15 Mini Protein Pancakes: $13</li>
+                <li>30 Mini Protein Pancakes: $23</li>
             </ul>
             <h3>Protein Cupcakes</h3>
             <ul>
-                <li>1 Cupcake: $3    (+$1 for Blueberries or Chocolate)</li>
-                <li>5 Cupcake Pack: $13 (+$3 for Blueberries or Chocolate)</li>
-                <li>12 Cupcakes: $23 (+$5 for Blueberries or Chocolate)</li>
+                <li>1 Protein Cupcake: $3 (+$1 for Blueberries or Chocolate)</li>
+                <li>5 Protein Cupcake Pack: $13 (+$3 for Blueberries or Chocolate)</li>
+                <li>12 Protein Cupcakes: $23 (+$5 for Blueberries or Chocolate)</li>
             </ul>
             <div class="product-images">
-                <img src="cupcake1.jpg" alt="Healthy Cupcake">
-                <img src="cupcakes2.jpg" alt="Healthy Cupcake">
-                <img src="pancakes1.jpg" alt="Healthy Pancake Stack">
-                <img src="pancakes2.jpg" alt="Healthy Pancake Stack">
+                <img src="cupcake1.jpg" alt="Protein Cupcake - Healthy Snack Option in Mesa AZ">
+                <img src="cupcakes2.jpg" alt="Assorted Protein Cupcakes - Mesa Tempe Chandler AZ">
+                <img src="pancakes1.jpg" alt="Protein Pancake Stack - Healthy Breakfast in Mesa AZ">
+                <img src="pancakes2.jpg" alt="Mini Protein Pancakes - High Protein Snacks in Chandler AZ">
             </div>
         </section>
         <section id="order">
-            <h2>Order Now</h2>
-            <p>Ready to fuel your day? Place your order for our protein-packed treats! Choose your favorite below:</p>
+            <h2>Order Protein Pancakes & Cupcakes</h2>
+            <p>Ready to fuel your day with the best <strong>protein pancakes</strong> and cupcakes? Place your order below for FREE local delivery in Mesa, Tempe, and Chandler, AZ:</p>
             <div class="order-buttons">
                 <a class="btn" href="https://square.link/u/jNyUJYZc" target="_blank" rel="noopener">Order Protein Pancakes</a>
                 <a class="btn" href="https://square.link/u/ahcGZY0u" target="_blank" rel="noopener">Order Protein Cupcakes</a>
                 <a class="btn" href="https://square.link/u/0jNYbs5q" target="_blank" rel="noopener">Order Mini Protein Pancakes</a>
             </div>
-            <p class="disclaimer">FREE local delivery on orders in Mesa, Tempe, and Chandler, AZ only.</p>
+            <p class="disclaimer"><strong>FREE local delivery</strong> on orders in Mesa, Tempe, and Chandler, AZ only.</p>
         </section>
         <section id="contact">
-            <h2>Contact Us</h2>
-            <p>Have questions about our products or need help placing an order? We’d love to hear from you! </p>
+            <h2>Contact Papi Protein Pancakes</h2>
+            <p>Have questions about our <strong>protein pancakes</strong>, nutrition, or need help ordering? Reach out to us!</p>
             <div class="social-handles">
                 <h3>Connect & Support</h3>
                 <ul>
-                    <li>
-                        Instagram: 
-                        <a href="https://instagram.com/papiproteinpancake" target="_blank">@papiproteinpancake</a>
-                    </li>
-                    <li>
-                        X (Twitter): 
-                        <a href="https://x.com/papi_pancake" target="_blank">@papi_pancake</a>
-                    </li>
-                    <li>
-                        Shef: 
-                        <a href="https://shef.com/order/shef/brian-g-44" target="_blank">Papi Protein Pancakes</a>
-                    </li>
-                    <li>
-                        Email: papiproteinpancakes@gmail.com
-                    </li>
-                    <li>
-                        Zelle: papiproteinpancakesaz@gmail.com
-                    </li>
-                    <li>
-                        Cash App: $papiproteinpancakes
-                    </li>
+                    <li>Instagram: <a href="https://instagram.com/papiproteinpancake" target="_blank">@papiproteinpancake</a></li>
+                    <li>X (Twitter): <a href="https://x.com/papi_pancake" target="_blank">@papi_pancake</a></li>
+                    <li>Shef: <a href="https://shef.com/order/shef/brian-g-44" target="_blank">Papi Protein Pancakes</a></li>
+                    <li>Email: papiproteinpancakes@gmail.com</li>
+                    <li>Zelle: papiproteinpancakesaz@gmail.com</li>
+                    <li>Cash App: $papiproteinpancakes</li>
                 </ul>
             </div>
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 Papi Protein Pancakes. Built for health and happiness.</p>
-        </div>
+        <p>&copy; 2025 Papi Protein Pancakes. The best protein pancakes in Mesa, Tempe, and Chandler, AZ. Built for health and happiness.</p>
     </footer>
 </body>
 </html>
