--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
                 <ul>
                     <li>Instagram: <a href="https://instagram.com/papiproteinpancake" target="_blank">@papiproteinpancake</a></li>
                     <li>X (Twitter): <a href="https://x.com/papi_pancake" target="_blank">@papi_pancake</a></li>
+                    <li>Google: <a href="https://g.page/r/CdhpREmyPbiLEAI/review" target="_blank">Papi Protein Pancakes</a></li>
                     <li>Shef: <a href="https://shef.com/order/shef/brian-g-44" target="_blank">Papi Protein Pancakes</a></li>
                     <li>Email: papiproteinpancakes@gmail.com</li>
                     <li>Zelle: papiproteinpancakesaz@gmail.com</li>
