--- a/index.html
+++ b/index.html
@@ -125,9 +125,7 @@
             <h2>Order Protein Pancakes & Cupcakes</h2>
             <p>Ready to fuel your day with the best <strong>protein pancakes</strong> and cupcakes? Place your order below for FREE local delivery in Mesa, Tempe, and Chandler, AZ:</p>
             <div class="order-buttons">
-                <a class="btn" href="https://square.link/u/jNyUJYZc" target="_blank" rel="noopener">Order Protein Pancakes</a>
-                <a class="btn" href="https://square.link/u/ahcGZY0u" target="_blank" rel="noopener">Order Protein Cupcakes</a>
-                <a class="btn" href="https://square.link/u/0jNYbs5q" target="_blank" rel="noopener">Order Mini Protein Pancakes</a>
+                <a class="btn" href="https://papi-protein-pancakes.square.site" target="_blank" rel="noopener">Order Here!</a>
             </div>
             <p class="disclaimer"><strong>FREE local delivery</strong> on orders in Mesa, Tempe, and Chandler, AZ only.</p>
         </section>
